assets/component-product-list.css
/* ... */
.card-product__btn.btn--OOS{
  position: relative;
  transition: font-weight 0.1s;
  text-decoration-line: none;
  color: var(--color-text);
  display: inline-flex;
}

.card-product__btn.btn--OOS:hover{
  font-weight: bold !important;
}

.card-product__btn.btn--OOS:after{
  content: "";
  background-color: var(--color-text);
  position: absolute;
  left: 0;
  bottom: 0px;
  width: 100%;
  height: 1px;
  transition: bottom .1s ;
}

.card-product__btn.btn--OOS:hover:after{
  bottom: -2px;
}

.card-product__btn-icon svg {
  vertical-align: middle;
  transform: rotate(0);
  transition: all .25s ease-in-out;
}
  
.card-product__btn:hover .card-product__btn-icon svg {
  transform: rotate(180deg); 
}
.card-product__btn:active .card-product__btn-icon svg {
  transform: rotate(270deg); 
}

.card-product__btn-text {
  margin-left: 4px;
  color: var(--color-header);
  border-bottom: 1px solid currentcolor;
  padding-bottom: 3px;
  display: inline-block;
  transition: all .1s;
}

.card-product__link {
  display: block;
}

.card-product__btn-text:hover {
  color: #AC1229;
  font-weight: 700;
  padding-bottom: 4px;
}

.section-featured-product .page-width {
  max-width: 1280px;
  padding: 48px;
  background-color: #fff;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
  border-radius: 15px;
  position: relative;
}

.section-featured-product .product__info-wrapper {
  padding: 0 !important;
}

.section-featured-product .featured-product {
  display: grid;
  grid-template-columns: 490px 1fr;
  grid-gap: 20px 110px;
  align-items: center;
}

.section-featured-product .grid__item {
  width: 100%;
  max-width: 100%;
  max-width: 488px;
}

.section-featured-product .product__media {
  padding-top: 98.6% !important;
  border: 0;
}

.featured-product__desc {
  font-size: 16px;
  line-height: 24px;
  color: #484E57;
  margin-bottom: 40px;
}


.section-featured-product .product__sub-title {
  font-weight: 300;
  font-size: 18px;
  line-height: 24px;
  font-family: var(--my-font);
  text-transform: uppercase;
  color: var(--color-text);
  margin-bottom: 20px;
}

.section-featured-product .product__title {
  margin: 0 0 20px;
  font-family: var(--font-2);
  font-weight: 400;
  font-size: 48px;
  line-height: 59px;
  color: var(--color-text);
  text-transform: none;
}

.section-featured-product .price {
  font-weight: 300;
  font-size: 18px;
  line-height: 24px;
  color: var(--color-text);
  font-family: var(--my-font);
  text-transform: uppercase;
}

.section-featured-product .product-price {
  margin-top: 0;
  margin-bottom: 40px;
}

.section-featured-product .form__label {
  font-weight: 300;
  font-size: 12px;
  line-height: 21px;
  font-family: var(--my-font);
  text-transform: uppercase;
  color: var(--color-link-text);
  margin-bottom: 4px;
}

.section-featured-product .select {
  width: 100%;
  max-width: 100% !important;
}

.section-featured-product .select::after {
  display: none;
}

.section-featured-product .select__select {
  border: 1px solid #ccc;
  border-radius: 3px;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-family: var(--font-2);
  min-height: 49px;
  color: var(--color-text);
}

.section-featured-product .product-form__input--dropdown {
  max-width: 100%;
}

.section-featured-product {
  margin-bottom: 100px;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center center;
  background-image: url("data:image/svg+xml,%3Csvg width='1440' height='483' viewBox='0 0 1440 483' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1379_37780)'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M721.145 131.464C915.764 95.3254 1110.38 113.555 1305 131.784C1500.24 150.071 1695.48 168.358 1890.71 131.757V21.1375C1695.57 57.6681 1500.43 39.3897 1305.28 21.1112C1110.04 2.82396 914.807 -15.4633 719.569 21.1376V21.4316C524.951 57.57 330.332 39.3407 135.713 21.1115C-59.5244 2.82424 -254.762 -15.463 -450 21.1379L-450 131.758C-254.856 95.2272 -59.7121 113.506 135.432 131.784C330.67 150.071 525.908 168.359 721.145 131.758V131.464Z' fill='%230C5273'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M135.432 242.143C-59.7121 223.883 -254.856 205.623 -450 242.116L-450 131.4C-254.856 94.9072 -59.7121 113.167 135.432 131.426C330.144 149.646 524.857 167.865 719.569 131.694V131.4C914.713 94.9072 1109.86 113.167 1305 131.426C1500.24 149.695 1695.48 167.963 1890.71 131.4V242.116C1695.48 278.679 1500.24 260.411 1305 242.143C1110.38 223.932 915.764 205.722 721.145 241.823V242.116C525.908 278.679 330.67 260.411 135.432 242.143Z' fill='%237F161B'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M721.145 351.478C915.764 315.365 1110.38 333.582 1305 351.798C1500.24 370.073 1695.48 388.348 1890.71 351.772V241.123C1695.57 277.628 1500.43 259.363 1305.28 241.097C1110.04 222.822 914.806 204.547 719.568 241.123V241.417C524.95 277.53 330.332 259.313 135.713 241.097C-59.5244 222.822 -254.762 204.547 -450 241.123L-450 351.772C-254.856 315.267 -59.7121 333.533 135.432 351.799C330.67 370.073 525.908 388.348 721.145 351.772V351.478Z' fill='%23F2B3AB'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M721.145 462.177C915.764 425.976 1110.38 444.237 1305 462.497C1500.24 480.816 1695.48 499.135 1890.71 462.471V351.871C1695.48 388.535 1500.24 370.217 1305 351.898C1109.86 333.588 914.712 315.278 719.568 351.871V352.166C524.856 388.437 330.144 370.167 135.432 351.898C-59.7121 333.588 -254.856 315.278 -450 351.871L-450 462.471C-254.856 425.877 -59.7121 444.187 135.432 462.497C330.67 480.816 525.908 499.135 721.145 462.471V462.177Z' fill='%234AC4D9'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1379_37780'%3E%3Crect width='1440' height='483' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
}

.section-featured-product .product-formv-varaint {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 48px;
}

.section-featured-product .product-form__input--last {
  max-width: 59%;
  flex-basis: 59%;
  margin-right: 16px;
}
/* ... */

